Fix GWT in sandbox